; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_bcm2835.c_bcm2835_threaded_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_bcm2835.c_bcm2835_threaded_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm2835_host = type { i32, i32, i32, i32, i32 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @bcm2835_threaded_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm2835_threaded_irq(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.bcm2835_host*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.bcm2835_host*
  store %struct.bcm2835_host* %11, %struct.bcm2835_host** %5, align 8
  %12 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %13 = getelementptr inbounds %struct.bcm2835_host, %struct.bcm2835_host* %12, i32 0, i32 4
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @spin_lock_irqsave(i32* %13, i64 %14)
  %16 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %17 = getelementptr inbounds %struct.bcm2835_host, %struct.bcm2835_host* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %7, align 4
  %19 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %20 = getelementptr inbounds %struct.bcm2835_host, %struct.bcm2835_host* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %8, align 4
  %22 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %23 = getelementptr inbounds %struct.bcm2835_host, %struct.bcm2835_host* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  store i32 %24, i32* %9, align 4
  %25 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %26 = getelementptr inbounds %struct.bcm2835_host, %struct.bcm2835_host* %25, i32 0, i32 0
  store i32 0, i32* %26, align 4
  %27 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %28 = getelementptr inbounds %struct.bcm2835_host, %struct.bcm2835_host* %27, i32 0, i32 1
  store i32 0, i32* %28, align 4
  %29 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %30 = getelementptr inbounds %struct.bcm2835_host, %struct.bcm2835_host* %29, i32 0, i32 2
  store i32 0, i32* %30, align 4
  %31 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %32 = getelementptr inbounds %struct.bcm2835_host, %struct.bcm2835_host* %31, i32 0, i32 4
  %33 = load i64, i64* %6, align 8
  %34 = call i32 @spin_unlock_irqrestore(i32* %32, i64 %33)
  %35 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %36 = getelementptr inbounds %struct.bcm2835_host, %struct.bcm2835_host* %35, i32 0, i32 3
  %37 = call i32 @mutex_lock(i32* %36)
  %38 = load i32, i32* %7, align 4
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %40, label %43

40:                                               ; preds = %2
  %41 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %42 = call i32 @bcm2835_block_irq(%struct.bcm2835_host* %41)
  br label %43

43:                                               ; preds = %40, %2
  %44 = load i32, i32* %8, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %46, label %49

46:                                               ; preds = %43
  %47 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %48 = call i32 @bcm2835_busy_irq(%struct.bcm2835_host* %47)
  br label %49

49:                                               ; preds = %46, %43
  %50 = load i32, i32* %9, align 4
  %51 = icmp ne i32 %50, 0
  br i1 %51, label %52, label %55

52:                                               ; preds = %49
  %53 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %54 = call i32 @bcm2835_data_threaded_irq(%struct.bcm2835_host* %53)
  br label %55

55:                                               ; preds = %52, %49
  %56 = load %struct.bcm2835_host*, %struct.bcm2835_host** %5, align 8
  %57 = getelementptr inbounds %struct.bcm2835_host, %struct.bcm2835_host* %56, i32 0, i32 3
  %58 = call i32 @mutex_unlock(i32* %57)
  %59 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %59
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @bcm2835_block_irq(%struct.bcm2835_host*) #1

declare dso_local i32 @bcm2835_busy_irq(%struct.bcm2835_host*) #1

declare dso_local i32 @bcm2835_data_threaded_irq(%struct.bcm2835_host*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
